fix toolbar not showing for some users but page still getting pushed to the right

--- a/castle/theme/theme_resources/css/theme.less
+++ b/castle/theme/theme_resources/css/theme.less
@@ -160,6 +160,11 @@ body.toolbar-initialized {
     margin-top: 55px;
     width: auto;
   }
+  &.no-roles {
+    > .wrap {
+      margin-left: 0;
+    }
+  }
   .navbar-default{
     top: 0;
   }
